# priject4

./: CMakeLists.txt
src/: main.cpp
src/algorithms/: scheduling_algorithm.hpp
src/algorithms/fcfs/: fcfs_algorithm.cpp  fcfs_algorithm.hpp
src/algorithms/rr/: rr_algorithm.cpp  rr_algorithm.hpp
src/simulation/: simulation.cpp  simulation.hpp
src/types/: enums.hpp
src/types/burst/: burst.cpp  burst.hpp
src/types/event/: event.hpp
src/types/process/: process.hpp
src/types/scheduling_decision/: scheduling_decision.hpp
src/types/system_stats/: system_stats.hpp
src/types/thread/: thread.cpp  thread.hpp
src/utilities/flags/: flags.cpp  flags.hpp
src/utilities/fmt/: core.h  format-inl.h  format.cpp  format.h
src/utilities/logger/: logger.cpp  logger.hpp
